<resources>
    <string name="app_name">Ask Doctor</string>
    <string name="wait_fragment_message">Please Wait ..</string>
    <string name="error_fragment_message">Error Occurred !</string>
    <string name="department_1">Orthopaedic Surgery</string>
    <string name="department_2">Dentistry</string>
    <string name="department_3">Cardiologist</string>
    <string name="department_4">Pediatrics</string>
    <string name="department_5">Dermatologist</string>
    <string name="department_6">Plastic Surgeon</string>
    <string name="department_7">Radiography</string>
    <string name="department_8">Oncologist</string>
    <string name="department_9">Obstetrics and Gynaecology</string>
    <string name="department_10">Urologist</string>
    <string name="department_11">Gastroenterologist</string>
    <string name="department_12">Pulmonologist</string>
    <string name="public_department">Public Department</string>
    <string name="department_1_Detail">Description \n
        The range of treatments done by orthopedists is enormous. It can cover anything from
        traction to amputation, hand reconstruction to spinal fusion or joint replacements.
        They also treat broken bones, strains and sprains,
        and dislocations. Some specific procedures done by orthopedic surgeons are listed as separate
        entries in this book, including arthroplasty, arthroscopic surgery, bone grafting, fasciotomy,
        fracture repair, kneecap removal, and traction.

        In general orthopedists are attached to a hospital, medical center, trauma center, or free-standing
        surgical center where they work closely with a surgical team including an anesthesiologist and
        surgical nurse. Orthopedic surgery can be performed under general, regional, or local anesthesia.

        Much of the work of the surgeon involves adding foreign material to the body in the form of screws,
        wires, pins, tongs, and prosthetics to hold damaged bones in their proper alignment or to replace
        damaged bone or connective tissue. Great improvements have been made in the development of artificial
        limbs and joints, and in the materials available to repair damage to bones and connective tissue.

        As developments occur in the fields of metallurgy and plastics, changes will take place in orthopedic
        surgery that will allow the surgeon to more nearly duplicate the natural functions of the bones, joints,
        and ligaments, and to more accurately restore damaged parts to their original range of motion.
    </string>
    <string name="department_2_Detail">Description \n
        Dentistry, also known as dental medicine and oral medicine, is a branch of medicine
        that consists of the study, diagnosis, prevention, and treatment of diseases, disorders,
        and conditions of the oral cavity, commonly in the dentition but also the oral mucosa,
        and of adjacent and related structures and tissues, particularly in the maxillofacial
        (jaw and facial) area.

        Although primarily associated with teeth among the general public,
        the field of dentistry or dental medicine is not limited to teeth but includes other aspects of the
        craniofacial complex including the temporomandibular joint and other supporting, muscular,
        lymphatic, nervous, vascular, and anatomical structures.

        Dentistry is often also understood to subsume the now largely defunct medical
        specialty of stomatology (the study of the mouth and its disorders and diseases)
        for which reason the two terms are used interchangeably in certain regions.

        Dental treatments are carried out by a dental team, which often consists of a dentist and dental
        auxiliaries (dental assistants, dental hygienists, dental technicians, as well as dental therapists).
        Most dentists either work in private practices (primary care), dental hospitals or (secondary care)
        institutions (prisons, armed forces bases, etc.).

        The history of dentistry is almost as ancient as the history of humanity and civilization
        with the earliest evidence dating from 7000 BC to 5500 BC.Skeletal remains from Mehgarh
        (now in Pakistan) dated to that time show evidence of teeth having been drilled with flint tools to
        remove decay, a method found to be "surprisingly effective".Dentistry is thought to have been the
        first specialization in medicine.The modern movement of evidence-based dentistry calls for the use
        of high-quality scientific evidence to guide decision-making.
    </string>
    <string name="department_3_Detail">
        What is a Cardiologist?
        Cardiologists are doctors who specialize in diagnosing and treating diseases or
        conditions of the heart and blood vessels—the cardiovascular system.

        Description \n
        Cardiologists are doctors who specialize in diagnosing and treating diseases or
        conditions of the heart and blood vessels—the cardiovascular system. You might also
        visit a cardiologist so you can learn about your risk factors for heart
        disease and find out what measures you can take for better heart health.

        When you are dealing with a complex health condition like heart disease,
        it is important that you find the right match between you and your specialist.

        A diagnosis of heart or vascular disease often begins with your primary care doctor,
        who then refers you to a cardiologist. The cardiologist evaluates your symptoms and your
        medical history and may recommend tests for a more definite diagnosis. Then, your cardiologist
        decides if your condition can be managed under his or her care using medicines or other available treatments.
        If your cardiologist decides that you need surgery, he or she refers you to a cardiovascular surgeon,
        who specializes in operations on the heart, lungs, and blood vessels.

        You remain under the care of your cardiologist even when you are referred to other specialists.
        Cardiology is a complex field, so many cardiologists specialize in different areas.

        All cardiologists are clinical cardiologists who focus on the diagnosis,
        medical management (use of medicines), and prevention of cardiovascular disease.

        Some clinical cardiologists specialize in pediatric cardiology, which means they
        diagnose and treat heart problems in children.

        When clinical cardiologists treat only
        adult patients, they specialize in adult cardiology. Other clinical cardiologists may specialize
        in interventional procedures (balloon angioplasty and stent placement), echocardiography, or
        electrophysiology.

        Cardiologists at the Texas Heart Institute research and develop techniques
        for treating heart and vascular diseases.
    </string>
    <string name="department_4_Detail">Description \n
        Pediatrics is the branch of
        medicine that involves the medical care of infants, children,
        and adolescents.
        The American Academy of Pediatrics recommends people be under pediatric care
        through the age of 21 (though usually only minors are required to be under pediatric care).
        In the United Kingdom, paediatrics covers patients until age 18.Worldwide age limits of
        pediatrics have been trending up year over year. A medical doctor who specializes in
        this area is known as a pediatrician, or paediatrician. The word pediatrics and its cognates mean
        "healer of children"
        Pediatricians work in hospitals and children\'s hospitals particularly
        those working in its subspecialties (e.g. neonatology), and as outpatient primary care physicians.
    </string>
    <string name="department_5_Detail">Description \n
        Dermatology is the branch of medicine dealing with the skin.
        It is a speciality with both medical and surgical aspects.
        A dermatologist is a specialist medical doctor who manages diseases related to skin,
        hair, nails, and some cosmetic problems.
    </string>
    <string name="department_6_Detail">Description \n
        Plastic surgery is a surgical specialty involving the restoration,
        reconstruction, or alteration of the human body.
        It can be divided into two main categories: reconstructive surgery and cosmetic surgery.
        Reconstructive surgery includes craniofacial surgery, hand surgery, microsurgery,
        and the treatment of burns. While reconstructive surgery aims to reconstruct a part of the
        body or improve its functioning, cosmetic (or aesthetic) surgery aims at improving the appearance of it.
    </string>
    <string name="department_7_Detail">Description \n
        Radiography is an imaging technique using X-rays, gamma rays, or similar ionizing radiation
        and non-ionizing radiation to view the internal form of an object.
        Applications of radiography include medical radiography ("diagnostic" and "therapeutic")
        and industrial radiography. Similar techniques are used in airport security
        (where "body scanners" generally use backscatter X-ray). To create an image in conventional
        radiography, a beam of X-rays is produced by an X-ray generator and is projected toward the object.
        A certain amount of the X-rays or other radiation is absorbed by the object, dependent on the object\'s
        density and structural composition. The X-rays that pass through the object are captured
        behind the object by a detector (either photographic film or a digital detector).
        The generation of flat two dimensional images by this technique is called projectional radiography.
        In computed tomography (CT scanning) an X-ray source and its associated detectors rotate around the
        subject which itself moves through the conical X-ray beam produced. Any given point within
        the subject is crossed from many directions by many different beams at different times.
        Information regarding attenuation of these beams is collated and subjected to computation to
        generate two dimensional images in three planes (axial, coronal, and sagittal) which can be further
        processed to produce a three dimensional image.
    </string>
    <string name="private_question_title">Write Private Question</string>
    <string name="private_question_to">To : </string>
    <string name="private_question_question_body">Question Body</string>
    <string name="private_question_send_this_private_question">Send This Private Question</string>
    <string name="public_question_from">From : </string>
    <string name="public_question">Write Public Question</string>
    <string name="public_question_send">Send Public Question</string>
</resources>