<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/packet_color_4"
    tools:context=".PublicQuestionActivity">

    <TextView
        android:id="@+id/public_question_tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/bad_script"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/public_question"
        android:textColor="@color/packet_color_1"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/public_question_tv_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/artifika"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/packet_color_1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/public_question_tv_title"
        tools:text="@tools:sample/date/mmddyy" />

    <TextView
        android:id="@+id/public_question_tv_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/bad_script"
        android:text="@string/public_question_from"
        android:textColor="@color/packet_color_1"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/public_question_tv_date" />

    <TextView
        android:id="@+id/public_question_tv_patient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/bad_script"
        android:gravity="center"
        android:textColor="@color/packet_color_1"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/public_question_tv_from"
        app:layout_constraintTop_toBottomOf="@+id/public_question_tv_date" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/public_answer_et_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="Answer Body"
        android:scrollIndicators="end"
        android:showDividers="end"
        android:textColorHint="@color/packet_color_1"
        android:visibility="gone"
        app:endIconMode="clear_text"
        app:endIconTint="@color/packet_color_1"
        app:hintTextColor="@color/packet_color_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/public_question_et_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/public_question_et_answer_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/packet_color_4"
            android:inputType="textMultiLine"
            android:maxLines="6"
            android:textColor="@color/packet_color_1"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/public_question_et_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/private_question_question_body"
        android:showDividers="end"
        android:textColorHint="@color/packet_color_1"
        app:endIconMode="clear_text"
        app:endIconTint="@color/packet_color_1"
        app:hintTextColor="@color/packet_color_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/public_question_tv_patient">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/public_question_et_question_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/packet_color_4"
            android:inputType="textMultiLine"
            android:maxLines="6"
            android:textColor="@color/packet_color_1"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/public_question_btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/packet_color_1"
        android:fontFamily="@font/audiowide"
        android:onClick="sendThisPublicQuestion"
        android:text="@string/public_question_send"
        android:textAllCaps="false"
        android:textColor="@color/packet_color_4"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/public_answer_et_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>